@@ -30,4 +30,3 @@ Encoding: UTF-8
 URL: https://davidgohel.github.io/flextable
 BugReports: https://github.com/davidgohel/flextable/issues
 VignetteBuilder: knitr
-Remotes: davidgohel/officer
