@@ -7,6 +7,7 @@
 * ph_with method for flextable object. This enable `ph_location*` usage
   and make placement into slides easier.
 * new function `fit_to_width` to fit a flextable to a maximum width
+* `set_caption` can now be used with R Markdown for Word document
 
 ## Issues
 
